--- a/unit_15.html
+++ b/unit_15.html
@@ -125,6 +125,10 @@
 
     </div>
 
+    <div class="out-b">1</div>
+    <div class="out-b">2</div>
+    <div class="out-b">3</div>
+
     <script src="unit_15.js"></script>
 </body>
 
